setings z-index bug patch

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -30,7 +30,7 @@ body {
       height: 3.5rem;
       width: 100%;
       color: white;
-      z-index: 99999;
+      z-index: 998;
 
       .app-bar-content {
         display: flex;
@@ -145,7 +145,7 @@ body {
   }
 
   .settings-modal {
-    z-index: 9999999;
+    z-index: 999;
 
     .settings-container {
       background: $dark-grey;
@@ -159,7 +159,6 @@ body {
         background: $dark-grey;
         width: 100%;
         padding: 1rem;
-        z-index: 99999;
         border-bottom: solid 1px rgba(255,255,255, 0.15);
         
         h3 {
